# braingent-manifesto

./: .gitignore  AGENT-INTEGRATION.md  AGENT-TASK-COORDINATION.md  BOOTSTRAP-PROMPT.md  CONTRIBUTING.md  FAQ.md  FILES-NEEDED.md  HOW-IT-WORKS.md  INITIALIZE.md  LICENSE.md  MAINTENANCE.md  MANIFESTO.md  PRIVACY-AND-SAFETY.md  PUBLISHING-CHECKLIST.md  README.md  SETUP.md  STRUCTURE.md  TOKEN-EFFICIENT-ACCESS.md  V3-DOCUMENTATION-UPDATE-PLAN.md  WORKFLOW.md  renovate.json5
starter-pack/: .gitignore  AGENTS.md  CHATGPT_PROJECT_BRIEF.md  CLAUDE.md  CURRENT_STATE.md  FILE-TREE.md  INDEX.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
starter-pack/imports/: README.md
starter-pack/inbox/: README.md
starter-pack/indexes/: README.md  agent-task-graph.md  agent-task-queue.md  followups.md  memory-summary.md  organizations.md  people.md  projects.md  records-compact.json  records-rollup.md  records.json  records.md  repositories.md  stale-candidates.md  tools.md  topics.md
starter-pack/people/: README.md
starter-pack/preferences/: agent-task-protocol.md  agent-workflow.md  capture-policy.md  code-review.md  content-style.md  engineering-defaults.md  naming.md  note-taking-and-ai-memory.md  planning.md  pr-and-commit.md  privacy-and-safety.md  project-conventions.md  search-recipes.md  taxonomy.md  taxonomy.yml
starter-pack/scripts/: __init__.py  braingent.py  cleanup.sh  doctor.sh  eval_tokens.py  find.sh  mcp_server.py  mcp_tools.py  new-record.sh  qa-generate.sh  recall.sh  reindex.sh  synthesize.sh  task-archive.sh  task-claim.sh  task-comment.sh  (+5 more)
(+139 files in other folders)
